# eaminer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  copy  docker-readme.md  test  test.config
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
cmake/: EthCompilerSettings.cmake
cmake/cable/buildinfo/: gitinfo.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  Options.md  POOL_EXAMPLES_ETH.md
eaminer/: CMakeLists.txt  main.cpp
ethash/: CMakeLists.txt
ethash/include/ethash/: ethash.h  ethash.hpp  hash_types.h  hash_types.hpp  keccak.hpp  version.h
ethash/lib/ethash/: CMakeLists.txt  bit_manipulation.h  builtins.h  endianness.hpp  ethash-internal.hpp  ethash.cpp  kiss99.hpp  managed.cpp  primes.c
ethash/lib/keccak/: CMakeLists.txt  keccak.c  keccakf800.c
libapi/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libcl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt  bin2h.cmake  ethash.cl
libcl/CL/: opencl.hpp
libcpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libcuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  cuda_helper.h  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h  fnv.cuh  keccak.cuh
libdev/: CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.h  Log.cpp  Log.h  Terminal.h  Worker.cpp  Worker.h  vector_ref.h
libeth/: CMakeLists.txt  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
libhwmon/: CMakeLists.txt  wrapadl.cpp  wrapamdsysfs.cpp  wrapamdsysfs.h  wraphelper.cpp  wrapnvml.cpp
libpool/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpool/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpool/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpool/testing/: SimulateClient.cpp  SimulateClient.h
libsycl/: CMakeLists.txt  SYCLMiner.cpp  SYCLMiner.h  dagger_shuffled.hpp  ethash_miner_common.h  ethash_miner_kernels.hpp  ethash_sycl_miner_kernel.cpp  ethash_sycl_miner_kernel.h  include_sycl.h  keccak.hpp  sycl_helpers.hpp
libsycl/cmake/: FindSYCL.cmake
nsfminer/: CMakeLists.txt  DBusInt.h  main.cpp
